--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -141,6 +141,7 @@ es-CL:
   lesson_number: Lección %{number}
   let_us_know: ¡Por favor avísanos!
   level: Nivel
+  level_up: ¡Subiste de nivel!
   loading: Cargando
   load_solution_into_console: Cargar la solución en la consola
   locked_content: 'Éste contenido se desbloqueará cuando termines los capítulos anteriores'
@@ -237,6 +238,7 @@ es-CL:
     other: '%{count} resueltas'
   solved_exercises: Ejercicios Resueltos
   solve_doubts: Resuelve consultas
+  solve_more_exercises_to_level_up: Resuelve <span>number</span> ejercicios más para pasar al siguiente nivel.
   solve_your_doubts: Consulta tus dudas
   solve_your_doubts_teaser: ¿Tienes alguna consulta?
   something_went_wrong: ¡Ups!, algo no anduvo bien...
