--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -223,7 +223,7 @@ en:
   retry_exercise: Retry
   running: running
   save: Save
-  see_context: Watch the animation of the beginning
+  see_context: Watch exercise introduction animation
   sending_solution: Sending solution
   show: Show
   sign_in: Sign in
