--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -112,7 +112,7 @@ es:
   forbidden_explanation: ¿Puede que hayas ingresado con una cuenta incorrecta?
   format: Dar formato
   forum_terms: Reglas del Espacio de Consultas
-  forum_terms_link: Si tenés alguna duda, accedé a las %{terms_link}
+  forum_terms_link: No olvides que al participar debés cumplir las %{terms_link}
   fullscreen: "Pantalla completa"
   gender: Género
   get_messages: "Ver mensajes"
