--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -107,6 +107,7 @@ pt:
   first_name: Nome
   forbidden_explanation: Você poderia ter entrado com uma conta incorreta?
   format: Formato
+  forum: Espaço de Consulta
   forum_terms: Regras do Espaço de Consulta
   forum_terms_link: Se você tiver alguma dúvida, consulte as %{terms_link}
   fullscreen: Tela completa
