--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -194,6 +194,7 @@ es:
   not_found: ¡La página que buscaste no existe!
   not_found_explanation: Fijate si escribiste bien la dirección.
   not_in_any_organizations: ¡Parece que no estás en ninguna organización todavía!
+  notifications: Notificaciones
   notify_problem_with_exercise: Reportá un bug
   office: Secretaría
   only_landscape_support: Por favor, rotá tu tablet o celular para realizar ejercicios
