--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -187,6 +187,7 @@ pt:
   not_found: A página que você pesquisou não existe!
   not_found_explanation: Olhe se você escreveu o endereço corretamente.
   not_in_any_organizations: Parece que você ainda não está em nenhuma organização!
+  notifications: Notificações
   notify_problem_with_exercise: Relatar um erro
   office: Secretariado
   only_landscape_support: Por favor, gire seu tablet ou celular para realizar exercícios
