--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -183,6 +183,7 @@ es-CL:
   not_found: ¡La página que buscaste no existe!
   not_found_explanation: Fíjate si escribiste bien la dirección.
   not_in_any_organizations: ¡Parece que no estás en ninguna organización todavía!
+  notifications: Notificaciones
   notify_problem_with_exercise: Reporta un bug
   office: Secretaría
   only_landscape_support: Por favor, rota tu tablet o celular para realizar ejercicios
