--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -236,6 +236,7 @@ es-CL:
   running: procesando
   save: Guardar
   see_context: Mira la animación del principio
+  select_file: Seleccionar archivo
   send: Enviar
   sending_solution: Enviando solución
   show: Mostrar
@@ -297,7 +298,6 @@ es-CL:
   unprepared_organization_explanation: ¡Este recorrido aún no ha comenzado!
   unsubscribe: Dejar de recibir notificaciones
   unsubscribed_successfully: Te desuscribiste exitosamente de los recordatorios.
-  upload_solution: "Subir solución"
   uploading_solution: "Subiendo solución"
   upvote: Es útil
   upvotes_count_desc: Más útiles
