--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -240,6 +240,7 @@ pt:
   running: processamento
   save: Salvar
   see_context: Veja a animação desde o início
+  select_file: Selecione o arquivo
   send: Enviar
   sending_solution: Solução de envio
   show: Mostrar
@@ -296,7 +297,6 @@ pt:
   unmeet_expectations: Objetivos que não foram atendidos
   unprepared_organization_explanation: Este curso ainda não começou
   unsubscribe: Cancelar subscrição
-  upload_solution: Carregar solução
   uploading_solution: Uploading solution
   user: Usuário
   user_data_updated: Os seus dados foram atualizados corretamente
