--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -72,6 +72,7 @@ es:
   disabled_explanation: Estás intentando acceder a un recurso que fue deshabilitado o eliminado de forma permamente
   disabled_organization_explanation: Este recorrido ha finalizado
   discussion_description_placeholder: Podés agregar información para detallar más tu consulta
+  discussion_new_message: Mensaje nuevo en %{title}
   discussion_updated: Consulta actualizada
   discussions: Consultas
   dont_leave_us: ¡No nos abandones! Aprender a programar es divertido. Sólo tenés que seguir practicando.
@@ -94,6 +95,8 @@ es:
       internal_server_error: ¡Ups! Algo no anduvo bien
       not_found: ¡Ups!  La página no existe
   exams: Exámenes
+  exam_authorization_request_updated: Hay novedades sobre tu inscripción a %{description}
+  exam_registration_open: ¡Ya podés inscribirte a %{description}!
   exercise: Ejercicio
   exercise_count: ejercicios
   exercise_number: Ejercicio %{number}
@@ -181,6 +184,7 @@ es:
   new_message: ¿Tenés dudas? ¡Levantá la mano!
   new_discussion: Nueva consulta
   new_message_placeholder: Escribí el mensaje para tu docente acá...
+  new_message_received: Tenés un nuevo mensaje de %{sender}
   next_exercise: Siguiente
   next_guide: 'Siguiente Lección: %{name}'
   no_discussions: No encontramos consultas que coincidan con tu búsqueda.
