--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -69,6 +69,7 @@ pt:
   disabled_explanation: Você está tentando acessar um recurso que foi desativado ou removido permanentemente
   disabled_organization_explanation: Este curso terminou
   discussion_description_placeholder: Você pode adicionar mais informações sobre sua dúvida
+  discussion_new_message: Nova mensagem em %{title}
   discussion_updated: Consulta actualizada
   discussions: Consultas
   download: Faça o download do que você fez
@@ -90,6 +91,8 @@ pt:
       internal_server_error: Opa! Algo não estava certo
       not_found: Opa! A página que você pesquisou não existe
   exams: Examesca
+  exam_authorization_request_updated: Há notícias sobre seu registro para %{description}
+  exam_registration_open: ¡Inscrições abertas para %{description}!
   exercise: Exercício
   exercise_count: exercícios
   exercise_number: Exercício %{number}
@@ -174,6 +177,7 @@ pt:
   new: Novo
   new_message: Você tem dúvidas? Levante a mão!
   new_message_placeholder: Escreva sua mensagem para o seu professor aqui ...
+  new_message_received: Você tem uma nova mensagem de %{sender}
   next_exercise: Em seguida
   next_guide: Próxima Lição %{nome}
   no_discussions: Não encontramos consultas que correspondam à sua pesquisa.
